# pcpe2

./: .gitignore  .gitmodules  .travis.yml  AUTHOR  CMakeLists.txt  Makefile  README.md  travis.sh
example/: Makefile  gdbinit  test.sh
example/small/: Makefile
include/: com_subseq.h  com_subseq_sort.h  env.h  logging.h  max_comsubseq.h  pcpe_util.h  seq.h  simple_task.h  small_seq_hash.h
pymodule/: Makefile  setup.py
pymodule/inc/: esort.h  max_comsubseq.h  pymodule.h
pymodule/src/: hash_table.cpp  main.cpp  pymodule.cpp
scripts/: build_ci.sh  read_fasta.py
src/: CMakeLists.txt  com_subseq.cc  com_subseq_sort.cc  env.cc  logging.cc  main.cxx  max_comsubseq.cc  pcpe_util.cc  simple_task.cc  small_seq_hash.cc
src/main_compare/: Makefile  main.cpp
src/main_compare/inc/: compare_subseq.h  esort.h  hash_table.h  max_comsubseq.h  pcpe_util.h
src/main_compare/src/: compare_subseq.cpp  esort.cpp  hash_table.cpp  main.cpp  max_comsubseq.cpp  pcpe_util.cpp
src/main_compare/test/: Makefile  init_test.sh  test_esort.cpp  test_hash_table.cpp  test_main.cpp  test_max_comsubseq.cpp  test_pcpe_util.cpp
src/main_compare/test/src/: test_esort.cpp  test_hash_table.cpp  test_pcpe_util.cpp
src/max_subseq/: Makefile
src/max_subseq/inc/: com_subseq.h  env.h  logging.h  pcpe_util.h  seq.h  simple_task.h  small_seq_hash.h
src/max_subseq/src/: com_subseq.cc  com_subseq_sort.cc  env.cc  logging.cc  main.cc  pcpe_util.cc  simple_task.cc  small_seq_hash.cc
src/max_subseq/test/: Makefile  init_test.sh
src/max_subseq/test/src/: test_com_subseq.cc  test_seq.cc  test_simple_task.cc  test_small_seq_hash.cc  test_util.cc
src/max_subseq/test/testdata/: esort_input_3.in  test_esort_file.in
src/read_fasta/: read_fasta.py
test/: CMakeLists.txt  test_com_subseq.cc  test_simple_task.cc
test/src/: test_com_subseq.cc  test_com_subseq_sort.cc  test_logging.cc  test_max_comsubseqs.cc  test_simple_task.cc  test_small_seq_hash.cc  test_util.cc
test/testdata/: esort_input_1.in  esort_input_2.in  test_small_hash_table_reader_1.in
